--- a/css/app.css
+++ b/css/app.css
@@ -64,21 +64,24 @@ h1 {
     justify-content: center;
     align-items: center;
     box-shadow: 5px 2px 20px 0 rgba(46, 61, 73, 0.5);
+    transition: all 0.3s;
+}
+
+.deck .card:hover{
+    transform: scale(1.05);
 }
 
 .deck .card.open {
     transform: rotateY(0);
-    /* background: #f5564e; */
     background: white;
     color: #f5564e;
     cursor: default;
-}
-
-.deck .card.show {
-    font-size: 33px;
+    font-size: 35px;
+    transition: all 0.3s;
 }
 
 .deck .card.match {
+    transform: rotateY(0);
     cursor: default;
     background: #1a3263;
     font-size: 33px;
@@ -122,24 +125,24 @@ h1 {
  */
 
  .modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
+    display: none;
+    position: fixed;
+    z-index: 1;
     left: 0;
     top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0,0,0,0.4);
   }
 
   .modal-content {
     background-color: #fefefe;
-    margin: 15% auto; /* 15% from the top and centered */
+    margin: 30% auto; 
     padding: 20px;
     border: 1px solid #888;
-    width: 50%; /* Could be more or less, depending on screen size */
+    width: 50%;
   }
 
   .close {
@@ -148,22 +151,4 @@ h1 {
     font-size: 28px;
     font-weight: bold;
     cursor: pointer;
-  }
-
-/*
- * Animations
- */
-
-@keyframes bounceIn {
-    0% {
-      transform: scale(0.1);
-      opacity: 0;
-    }
-    60% {
-      transform: scale(1.2);
-      opacity: 1;
-    }
-    100% {
-      transform: scale(1);
-    }
   }
