--- a/css/app.css
+++ b/css/app.css
@@ -152,3 +152,47 @@ h1 {
     font-weight: bold;
     cursor: pointer;
   }
+
+  @media screen and (min-width: 660px) and (max-width: 770px) {
+    .deck {
+        width: 580px;
+        min-height: 597px;
+        background: linear-gradient(160deg, #fab95b 0%, #fab95b 100%);
+        padding: 28px;
+    }
+
+    .deck .card {
+        height: 109px;
+        width: 109px;
+        box-shadow: 5px 2px 10px 0 rgba(46, 61, 73, 0.5);
+    }
+  }
+
+  @media screen and (max-width: 660px) {
+    .deck {
+        width: 330px;
+        min-height: 340px;
+        background: linear-gradient(160deg, #fab95b 0%, #fab95b 100%);
+        padding: 16px;
+    }
+
+    .deck .card {
+        height: 61px;
+        width: 61px;
+        box-shadow: 5px 2px 10px 0 rgba(46, 61, 73, 0.5);
+    }
+
+    .score-panel {
+        width: 330px;
+        font-size: 15px;
+    }
+
+    .score-panel .timer {
+        display: inline-block;
+        width: 30%;
+    }
+
+    .modal-content {
+        width: 80%;
+      }
+  }
