--- a/css/app.css
+++ b/css/app.css
@@ -153,6 +153,15 @@ h1 {
     cursor: pointer;
   }
 
+  .play-again {
+    background-color: #f5564e;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 16px;
+  }
+
   @media screen and (min-width: 660px) and (max-width: 770px) {
     .deck {
         width: 580px;
